add swagger for password
