# app/Virtual/Request/Password/PasswordRequest.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Virtual\Request\Password;
+
+/**
+ * @OA\Schema(
+ *      title="Password user request",
+ *      description="Password user request body data",
+ *      type="object",
+ *      required={"email"}
+ * )
+ */
+class PasswordRequest
+{
+    /**
+     * @OA\Property(
+     *      title="email",
+     *      description="Email of the user",
+     *      example="email@gmail.com.br"
+     * )
+     *
+     * @var string
+     */
+    public string $email;
+}
